# funasr-long-audio

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
docs/: architecture.md  release-checklist.md  setup.md
src/funasr_long_audio_safe/: __init__.py  cleanup.py  cli.py  model_loader.py  worker.py
tests/: test_cli_routing.py  test_engine_smoke.py
