[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "funasr-long-audio-safe"
version = "0.1.0"
description = "Safe long-audio transcription toolkit for FunASR (chunking + worker + cleanup)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "naplesblue" }
]
keywords = ["funasr", "asr", "speech", "transcription", "long-audio", "vad", "worker"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "funasr>=1.3.1",
  "modelscope>=1.20.0",
  "transformers>=4.43.0",
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
flas = "funasr_long_audio_safe.cli:main"
funasr-long-audio-safe = "funasr_long_audio_safe.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
